# my_work_assistant

./: .gitignore  BUGFIX_REPORT.md  README.md  electron-builder.json  package-lock.json  package.json  start-dev.js
electron/: main.js  preload.js
scripts/: README.md  build-release.sh  dev.sh  inject-base-data.sh  inject-test-data.sh  reset-and-inject.sh
server/: index.js  init-db.js
server/controllers/: index.js  personnelController.js
server/controllers/expenses/: expenseCategoryController.js  expenseController.js  voucherTypeController.js
server/db/: init-default-data.js  init-test-data.js  init.js  migrate-voucher-types.js  schema.js  schema.sql
server/models/: index.js
server/routes/: categories.js  expenses.js  index.js  personnel.js  projects.js  settings.js  worklogs.js
server/services/: index.js  personnelService.js
server/utils/: db.js
src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: expense_commands.rs  mod.rs  person_setting_commands.rs  project_commands.rs  report_commands.rs  work_log_commands.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: expense.rs  mod.rs  person.rs  project.rs  setting.rs  work_log.rs
src-tauri/src/services/: expense_service.rs  mod.rs  person_setting_service.rs  project_service.rs  report_service.rs  work_log_service.rs
templates/: 11.xlsx  22.xlsx
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
web/src/: App.vue  main.js  main.ts  router.js  router.ts  style.css
(+51 files in other folders)
